--- a/Bakery.WpfApplication/App.xaml
+++ b/Bakery.WpfApplication/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Bakery.WpfApplication"
-             StartupUri="MainWindow.xaml">
+             StartupUri="LoginWindow.xaml">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="FontFamily" Value="Montserrat"/>
