--- a/Bakery.WpfApplication/ShopWindow.xaml
+++ b/Bakery.WpfApplication/ShopWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Bakery.WpfApplication.MainWindow"
+﻿<Window x:Class="Bakery.WpfApplication.ShopWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
