--- a/Bakery.WpfApplication/Shop/BakeryList.xaml
+++ b/Bakery.WpfApplication/Shop/BakeryList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Bakery.WpfApplication.Shop.BakeryList"
+﻿<Window x:Class="Bakery.WpfApplication.Shop.BakeryList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,4 +12,4 @@
             </WrapPanel>
         </ScrollViewer>
     </Grid>
-</UserControl>
+</Window>
