--- a/Bakery.WpfApplication/Shop/CheckOut.xaml
+++ b/Bakery.WpfApplication/Shop/CheckOut.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="Bakery.WpfApplication.Shop.CheckOut"
+﻿<Window x:Class="Bakery.WpfApplication.Shop.CheckOut"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bakery.WpfApplication.Shop"
         mc:Ignorable="d"
-        Loaded="OrderDetailManagement_OnLoaded"
         d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -22,7 +21,7 @@
      SelectionChanged="DgData_OnSelectionChanged"
      CanUserAddRows="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Koi Fish Name" Binding="{Binding KoiFish.KoiFishName}" Width="450" />
+                <DataGridTextColumn Header="Bakery Name" Binding="{Binding KoiFish.KoiFishName}" Width="450" />
                 <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="200"/>
                 <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="*"/>
             </DataGrid.Columns>
@@ -104,4 +103,4 @@
 
         </StackPanel>
     </Grid>
-</UserControl>
+</Window>
