--- a/Bakery.WpfApplication/ShopWindow.xaml
+++ b/Bakery.WpfApplication/ShopWindow.xaml
@@ -32,7 +32,7 @@
             <TextBlock x:Name="CartItems" Height="19" TextWrapping="Wrap" Text="0" Width="10" FontSize="18" Margin="42,0,0,0" />
             <Button x:Name="btnShoppingCart" Height="43" Width="46" 
                 Background="Transparent" BorderBrush="Transparent"
-                HorizontalAlignment="Left" Click="btnShoppingClick" Margin="19,0,0,0">
+                HorizontalAlignment="Left" Margin="19,0,0,0">
                 <StackPanel Orientation="Horizontal" Height="39" Width="146">
                     <Image Source="/Images/shoppingcart.png" Width="44" Height="40" Stretch="Uniform" VerticalAlignment="Center"/>
                 </StackPanel>
@@ -69,14 +69,14 @@
                 Margin="5,20,5,0" 
                 Content="Koi List" 
                 Foreground="Black" 
-                Click="bakeryList_Click"/>
+                />
 
             <Button x:Name="logOut" 
                 Height="40" 
                 Margin="5,20,5,0" 
                 Content="Log Out" 
                 Background="Orange"
-                Click="logOut_Click"/>
+                />
         </StackPanel>
 
         <ContentControl x:Name="ContentArea" Grid.Row="1" Margin="104,10,20,3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
