--- a/Bakery.WpfApplication/Shop/CheckOut.xaml
+++ b/Bakery.WpfApplication/Shop/CheckOut.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Bakery.WpfApplication.Shop.CheckOut"
+﻿<UserControl x:Class="Bakery.WpfApplication.Shop.CheckOut"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -103,4 +103,4 @@
 
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
