--- a/Bakery.WpfApplication/Shop/BakeryList.xaml
+++ b/Bakery.WpfApplication/Shop/BakeryList.xaml
@@ -1,15 +1,14 @@
 ﻿<UserControl x:Class="Bakery.WpfApplication.Shop.BakeryList"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Bakery.WpfApplication.Shop"
-        mc:Ignorable="d"
-        d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" Margin="104,47,20,3">
-            <WrapPanel x:Name="DataWrapPanel" Margin="0,0,0,0" Width="980">
-            </WrapPanel>
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:Bakery.WpfApplication.Shop"
+             mc:Ignorable="d"
+             d:DesignHeight="600" d:DesignWidth="800">
+    <Grid Background="Transparent">
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0">
+            <WrapPanel x:Name="DataWrapPanel" Margin="10"/>
         </ScrollViewer>
     </Grid>
 </UserControl>
