--- a/Bakery.WpfApplication/Shop/BakeryList.xaml
+++ b/Bakery.WpfApplication/Shop/BakeryList.xaml
@@ -5,10 +5,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:local="clr-namespace:Bakery.WpfApplication.Shop"
              mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="800">
+             Height="Auto" Width="Auto">
     <Grid Background="Transparent">
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Margin="0">
-            <WrapPanel x:Name="DataWrapPanel" Margin="10"/>
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <WrapPanel x:Name="DataWrapPanel" Margin="10" HorizontalAlignment="Stretch"/>
         </ScrollViewer>
     </Grid>
 </UserControl>
