--- a/Bakery.WpfApplication/View/BakeryManagement.xaml
+++ b/Bakery.WpfApplication/View/BakeryManagement.xaml
@@ -5,22 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bakery.WpfApplication.View"
         mc:Ignorable="d"
-        Height="416" Width="900">
+        Height="510" Width="1240" Loaded="UserControl_Loaded">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="7*" />
+            <RowDefinition Height="11*"/>
             <RowDefinition Height="50" />
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
 
-        <!-- Fish/Koi DataGrid -->
+ 
         <DataGrid x:Name="dgData" Grid.Row="0" ItemsSource="{Binding bakeryList}"
                   AutoGenerateColumns="False" IsReadOnly="False"
                   
-                  CanUserAddRows="False">
+                  CanUserAddRows="False" Grid.RowSpan="2" Loaded="dgData_Loaded">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding ProductID}" Width="50" IsReadOnly="True" />
                 <DataGridTextColumn Header="Name" Binding="{Binding ProductName}" Width="100" />
+                
                 <DataGridTemplateColumn Header="Image" Width="200">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -28,7 +30,8 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <!-- <DataGridTextColumn Header="Quantity" Binding="{Binding KoiFishQuantity}" Width="70" /> -->
+                
+         
                 <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="100" />
                 <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="70" />
                 <DataGridTextColumn Header="Stock" Binding="{Binding Stock}" Width="100" />
@@ -37,8 +40,8 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <!-- Form for adding or editing fish -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="50,5,50,0">
+  
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="50,5,50,0">
             <Button Content="Add Koi" Width="155" Margin="5" >
                 <Button.Background>
                     <SolidColorBrush Color="#0099FF" />
@@ -167,7 +170,7 @@
 
         <!-- Adding/Editing form          -->
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Height="38" VerticalAlignment="Top">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Height="38" VerticalAlignment="Top">
             <TextBox x:Name="BakeryId" Width="40" Margin="5" IsEnabled="False" />
             <TextBox x:Name="BakeryName" Width="100" Margin="5" />
             <StackPanel Orientation="Horizontal">
