--- a/Bakery.WpfApplication/View/OrderManagement.xaml
+++ b/Bakery.WpfApplication/View/OrderManagement.xaml
@@ -1,214 +1,98 @@
 ﻿<UserControl x:Class="Bakery.WpfApplication.View.OrderManagement"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Bakery.WpfApplication.View"
-        mc:Ignorable="d"
-        
-        d:DesignHeight="500" d:DesignWidth="1241">
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50"/>
-        </Grid.RowDefinitions>
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Bakery.WpfApplication.View"
+    mc:Ignorable="d"
+    d:DesignHeight="520" d:DesignWidth="1240">
 
-        <!-- User DataGrid -->
-        <DataGrid x:Name="dgData"
-            Grid.Row="0"
-            AutoGenerateColumns="False"
-            Margin="0 10 0 0"
-            IsReadOnly="True"
-          
-            CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Order Id" Binding="{Binding OrderId}" Width="80" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Order Date" Binding="{Binding OrderDate}" Width="140" />
-                <DataGridTextColumn Header="Total Amount" Binding="{Binding TotalAmount}" Width="120"/>
-                <DataGridTextColumn Header="User Name" Binding="{Binding User.UserName}" Width="100"/>
-                <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="*"/>
-            </DataGrid.Columns>
-        </DataGrid>
+            <DockPanel>
+                <!-- Admin-style inner header -->
+                <StackPanel DockPanel.Dock="Top" Height="36" HorizontalAlignment="Stretch">
+                    <StackPanel.Background>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                            <GradientStop Color="#FF0099FF" Offset="0"/>
+                            <GradientStop Color="#EC136D" Offset="1"/>
+                        </LinearGradientBrush>
+                    </StackPanel.Background>
+                    <Grid Height="36">
+                        <TextBlock Text="Order Management" FontSize="16" FontWeight="Bold" Foreground="White" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                    </Grid>
+                </StackPanel>
 
+                <!-- Content area: mimic Admin ContentArea styling -->
+                <Border DockPanel.Dock="Top" Margin="8" Padding="8" Background="WhiteSmoke" CornerRadius="4">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="280" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
 
+                        <!-- Top info row -->
+                        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Margin="0,0,0,8">
+                            <TextBox x:Name="txtOrderId" Width="80" Margin="2" IsReadOnly="True" />
+                            <TextBox x:Name="txtDate" Width="160" Margin="2" IsReadOnly="True" />
+                            <TextBox x:Name="txtTotalMoney" Width="120" Margin="2" IsReadOnly="True" />
+                            <ComboBox x:Name="cboUser" Width="180" Margin="2" IsHitTestVisible="False" Focusable="False" />
+                            <TextBox x:Name="txtStatus" Width="140" Margin="2" IsReadOnly="True" />
+                        </StackPanel>
 
-        <!-- Form for adding or editing users -->
-        <StackPanel Grid.Row="1" Orientation="Horizontal"
-                Height="38"
-                VerticalAlignment="Top">
-            <TextBox x:Name="txtOrderId"
-                     Width="80"
-                     Margin="5"
-                     IsEnabled="False"/>
-            <TextBox x:Name="txtDate" 
-                     Width="100"
-                     Margin="5"/>
-            <TextBox x:Name="txtTotalMoney"
-                     Width="80"
-                     Margin="5"/>
-            <ComboBox x:Name="cboUser"
-                     Width="80"
-                     Margin="5"/>
-            <StackPanel Orientation="Vertical" Margin="1" VerticalAlignment="Center">
-                <RadioButton x:Name="rbStatusActive" Content="Active" GroupName="StatusGroup"  IsChecked="{Binding IsActive, Mode=TwoWay}"/>
-                <RadioButton x:Name="rbStatusInactive" Content="Inactive" GroupName="StatusGroup" IsChecked="{Binding IsActive, Mode=TwoWay}"/>
-            </StackPanel>
-        </StackPanel>
-        <!-- Add and Delete Buttons -->
+                        <!-- Main lists -->
+                        <Grid Grid.Row="1" Grid.Column="0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="2*" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
 
-        <DataGrid x:Name="dgDetails"
-              Grid.Row="2"
-              AutoGenerateColumns="False"
-              SelectionMode="Single"
-              Margin="0 10 0 0"
-              IsReadOnly="True"
-            
-              CanUserAddRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Order Id" Binding="{Binding Order.OrderId}" Width="80" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Bakery Name" Binding="{Binding Product.ProductName}" Width="200" />
-                <DataGridTextColumn Header="Quantity" Binding="{Binding Quantity}" Width="100"/>
-                <DataGridTextColumn Header="Price" Binding="{Binding UnitPrice}" Width="60"/>
-            </DataGrid.Columns>
-        </DataGrid>
+                            <DataGrid x:Name="dgData" Grid.Row="0" AutoGenerateColumns="False" Margin="0,0,0,8" IsReadOnly="True" CanUserAddRows="False">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Order Id" Binding="{Binding OrderId}" Width="80" />
+                                    <DataGridTextColumn Header="Order Date" Binding="{Binding OrderDate}" Width="160" />
+                                    <DataGridTextColumn Header="Total" Binding="{Binding TotalAmount}" Width="100" />
+                                    <DataGridTextColumn Header="User" Binding="{Binding User.UserName}" Width="120" />
+                                    <DataGridTextColumn Header="Status" Binding="{Binding Status}" Width="*" />
+                                </DataGrid.Columns>
+                            </DataGrid>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal"
-                Height="38"
-                VerticalAlignment="Top">
-            <!-- <TextBox x:Name="txtOrderID" -->
-            <!--          Width="80" -->
-            <!--          Margin="5" -->
-            <!--          IsEnabled="False"/> -->
-            <ComboBox x:Name="cboKoi" 
-                 Width="90"
-                 Margin="5"/>
-            <TextBox x:Name="txtQuantity"
-                 Width="80"
-                 Margin="5"/>
-            <TextBox x:Name="txtPrice"
-                 Width="80"
-                 Margin="5"/>
-            <StackPanel Orientation="Vertical" Margin="1" VerticalAlignment="Center">
-                <RadioButton x:Name="rbStatusOn" Content="Active" GroupName="StatusGroup"  IsChecked="{Binding IsActive, Mode=TwoWay}"/>
-                <RadioButton x:Name="rbStatusOff" Content="Inactive" GroupName="StatusGroup" IsChecked="{Binding IsActive, Mode=TwoWay}"/>
-            </StackPanel>
-        </StackPanel>
+                            <DataGrid x:Name="dgDetails" Grid.Row="1" AutoGenerateColumns="False" SelectionMode="Single" IsReadOnly="True" CanUserAddRows="False">
+                                <DataGrid.Columns>
+                            <DataGridTextColumn Header="Product" Binding="{Binding Product.ProductName}" Width="*" />
+                        </DataGrid.Columns>
+                            </DataGrid>
+                        </Grid>
 
-        <StackPanel Grid.Row="4"
-            Orientation="Horizontal">
-            <!-- <Button Content="Create Order" -->
-            <!--         Width="155" -->
-            <!--         Margin="5" -->
-            <!--         Padding="5" -->
-            <!--         Click="btnCreateOrder"> -->
-            <!--     <Button.Background> -->
-            <!--         <SolidColorBrush Color="#0099FF" /> -->
-            <!--     </Button.Background> -->
-            <!--     <Button.Triggers> -->
-            <!--         <EventTrigger RoutedEvent="MouseEnter"> -->
-            <!--             <BeginStoryboard> -->
-            <!--                 <Storyboard> -->
-            <!--                     <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" -->
-            <!--         To="#28AEED" Duration="0:0:0.2"/> -->
-            <!--                 </Storyboard> -->
-            <!--             </BeginStoryboard> -->
-            <!--         </EventTrigger> -->
-            <!--         <EventTrigger RoutedEvent="MouseLeave"> -->
-            <!--             <BeginStoryboard> -->
-            <!--                 <Storyboard> -->
-            <!--                     <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" -->
-            <!--         To="#0099FF" Duration="0:0:0.2"/> -->
-            <!--                 </Storyboard> -->
-            <!--             </BeginStoryboard> -->
-            <!--         </EventTrigger> -->
-            <!--     </Button.Triggers> -->
-            <!-- </Button> -->
-            <!-- <Button Content="Update Order" -->
-            <!--         Width="155" -->
-            <!--         Margin="5" -->
-            <!--         Padding="5" -->
-            <!--         Click="btnUpdateOrder"> -->
-            <!--     <Button.Background> -->
-            <!--         <SolidColorBrush Color="#FF1B7140" /> -->
-            <!--     </Button.Background> -->
-            <!--     <Button.Triggers> -->
-            <!--         <EventTrigger RoutedEvent="MouseEnter"> -->
-            <!--             <BeginStoryboard> -->
-            <!--                 <Storyboard> -->
-            <!--                     <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" -->
-            <!--         To="#28AEED" Duration="0:0:0.2"/> -->
-            <!--                 </Storyboard> -->
-            <!--             </BeginStoryboard> -->
-            <!--         </EventTrigger> -->
-            <!--         <EventTrigger RoutedEvent="MouseLeave"> -->
-            <!--             <BeginStoryboard> -->
-            <!--                 <Storyboard> -->
-            <!--                     <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)" -->
-            <!--         To="#0099FF" Duration="0:0:0.2"/> -->
-            <!--                 </Storyboard> -->
-            <!--             </BeginStoryboard> -->
-            <!--         </EventTrigger> -->
-            <!--     </Button.Triggers> -->
-            <!-- </Button> -->
-            <Button Content="Delete Order"
-                Width="155"
-                Margin="5"
-             
-                >
-                <Button.Background>
-                    <SolidColorBrush Color="#FFA2AA3D" />
-                </Button.Background>
-                <Button.Triggers>
-                    <EventTrigger RoutedEvent="MouseEnter">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                To="#28AEED" Duration="0:0:0.2"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                    <EventTrigger RoutedEvent="MouseLeave">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                To="#0099FF" Duration="0:0:0.2"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Button.Triggers>
-            </Button>
-            <Button Content="Delete Order Detail"
-                Width="155"
-                Margin="5"
-                Padding="5"
-                >
-                <Button.Background>
-                    <SolidColorBrush Color="#FF1B7140" />
-                </Button.Background>
-                <Button.Triggers>
-                    <EventTrigger RoutedEvent="MouseEnter">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="#28AEED" Duration="0:0:0.2"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                    <EventTrigger RoutedEvent="MouseLeave">
-                        <BeginStoryboard>
-                            <Storyboard>
-                                <ColorAnimation Storyboard.TargetProperty="(Button.Background).(SolidColorBrush.Color)"
-                                            To="#0099FF" Duration="0:0:0.2"/>
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger>
-                </Button.Triggers>
-            </Button>
+                        <!-- Right-side actions panel -->
+                        <StackPanel Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Margin="12,0,0,0">
+                            <TextBlock Text="Actions" FontWeight="Bold" Margin="0,0,0,6" />
+                            <Button x:Name="btnDeleteOrder" Content="Delete Order" Width="240" Margin="0,4,0,0" IsEnabled="False" Click="btnDeleteOrder_Click" Height="28">
+                                <Button.Background>
+                                    <SolidColorBrush Color="#FFA2AA3D" />
+                                </Button.Background>
+                            </Button>
+                            <Button x:Name="btnDeleteOrderDetail" Content="Delete Order Detail" Width="240" Margin="0,8,0,0" IsEnabled="False" Click="btnDeleteOrderDetail_Click" Height="33">
+                                <Button.Background>
+                                    <SolidColorBrush Color="#FF1B7140" />
+                                </Button.Background>
+                            </Button>
 
-        </StackPanel>
+                            <Separator Margin="0,12,0,12" />
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock Text="Detail" FontWeight="SemiBold" />
+                                <ComboBox x:Name="cboKoi" Width="240" Margin="0,6,0,0" IsHitTestVisible="False" Focusable="False" />
+                                <TextBox x:Name="txtQuantity" Width="240" Margin="0,6,0,0" IsReadOnly="True" />
+                                <TextBox x:Name="txtPrice" Width="240" Margin="0,6,0,0" IsReadOnly="True" />
+                            </StackPanel>
+                        </StackPanel>
 
-    </Grid>
-</UserControl>
+                    </Grid>
+                </Border>
+
+            </DockPanel>
+
+        </UserControl>
