Squashed commit of the following:
commit 47da2dfa9bd661cb41fa8f3ef1036de174903bd7
Merge: f6cde96 b643723
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:21:52 2025 +0700

    Merge pull request #4 from tu0504/tuanvy/bakery-page

    Tuanvy/bakery page

commit b6437232e3a391e47886637ae603d394f72d477f
Merge: 612bf7e f6cde96
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:21:36 2025 +0700

    Merge branch 'main' into tuanvy/bakery-page

commit 612bf7eccae2caa91e5989a72851d50369058107
Author: tuanvy <maituanvyst@gmail.com>
Date:   Fri Nov 14 02:19:01 2025 +0700

    Bakery Page

commit f6cde96fe3498faa3f7ab79caf16fa22fa155ed2
Author: Vinh Nguyen <motmuahaxinhdep@gmail.com>
Date:   Fri Nov 14 01:44:05 2025 +0700

    fix layout order management

commit 495ef2ea58c17435e26b0d26f2d3a2ac0f96dee3
Merge: 303651d 31e3932
Author: Le Nguyen Anh Kiet <kietlnase18445@fpt.edu.vn>
Date:   Thu Nov 13 23:47:34 2025 +0700

    fix xong user.xaml

commit a28e1c387c809f75a62314ad8f5abff260c0fb4b
Author: tuanvy <maituanvyst@gmail.com>
Date:   Thu Nov 13 23:16:27 2025 +0700

    fix bug

commit 31e39326bce2321359d529a9ac25d2c28c232c4e
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:42:52 2025 +0700

    done

commit d876bd20e3c38eeab835c0eb0ed0cc6dc72bb898
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:33:25 2025 +0700

    done

commit d4eaef598b97fa6a55fddcf8cd451f04e61c8b64
Author: tu0504 <tuttcse170213@fpt.edu.vn>
Date:   Thu Nov 13 21:19:54 2025 +0700

    pro

commit b4406f46fdf7999f73da87bc1217813c516b9ea5
Merge: 9766146 5a7cdd5
Author: nguyen <149769526+qnguen14@users.noreply.github.com>
Date:   Thu Nov 13 18:41:35 2025 +0700

    Merge pull request #3 from tu0504/dev

    Dev

commit 5a7cdd580ad1b2bfaf37ce0b42d29f9c75f409c5
Author: nguyen <qnguyen.1014@gmail.com>
Date:   Thu Nov 13 18:39:30 2025 +0700

    fixed login + added logout button at admin dashboard

commit 614b1dc84b2e291720c0ea6b04e1d356091c70c9
Author: Vinh Ng

--- a/Bakery.WpfApplication/View/UserManagement.xaml
+++ b/Bakery.WpfApplication/View/UserManagement.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bakery.WpfApplication.View"
-        mc:Ignorable="d" Height="510" Width="1241" Loaded="UserControl_Loaded" >
+        mc:Ignorable="d" Height="500" Width="1241" Loaded="UserControl_Loaded" >
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -35,8 +35,8 @@
                             <Button Content="Edit" 
                             Click="btnEdit_Click"
                             Foreground="Black"
+                                    FontWeight="Bold"
                             />
-                            
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -47,59 +47,126 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal"
                 Height="38"
                 VerticalAlignment="Top">
-            <TextBox x:Name="txtUserId"
-                 
-                 Width="40"
-                 Margin="5"
-                 IsEnabled="False" />
-            <TextBox x:Name="txtUserName"
-                 
-                 Width="70"
-                 Margin="5" 
-                 Foreground="Gray"
-                 />
-            <TextBox x:Name="txtFullName"
-                
-                 Width="140"
-                 Margin="5"    
-                 Foreground="Gray"
-               />
-            <TextBox x:Name="txtEmail"
-                
-                Width="120"
-                Margin="5" 
-                Foreground="Gray"
+            <Grid Width="40" Margin="5">
+
+                <TextBlock Text="ID" 
+                   VerticalAlignment="Center" 
+                   Foreground="#888" 
+                   IsHitTestVisible="False"
+                   Background="White" Height="28"/>
+                <TextBox x:Name="txtUserId"
+                   Background="Transparent"
+                   VerticalContentAlignment="Center"
+                   IsEnabled="False" 
+                   GotFocus="txtInput_GotFocus" 
+                   LostFocus="txtInput_LostFocus"/>
+
+            </Grid>
+
+            <Grid Width="85" Margin="5">
+                <TextBlock Text="User Name" 
+                VerticalAlignment="Center" 
+                Foreground="#888" 
+                IsHitTestVisible="False"
+                Background="White" Height="28"/>
+                <TextBox x:Name="txtUserName"
+                Background="Transparent"
+                VerticalContentAlignment="Center"
+                GotFocus="txtInput_GotFocus" 
+                LostFocus="txtInput_LostFocus"
                 />
-            <TextBox x:Name="txtPassword"
-                 
-                 Width="100"
-                 Margin="5"
-                 Foreground="Gray"
-                 />
-            <TextBox x:Name="txtRole"
-                 
-                 Width="50"
-                 Margin="5"
-                 Foreground="Gray"
-                 />
-            
-            <TextBox x:Name="txtAddress"
-                 
-                 Width="120"
-                 Margin="5" 
-                 Foreground="Gray"
+            </Grid>
+
+            <Grid Width="120" Margin="5">
+                <TextBlock Text="Full Name" 
+                VerticalAlignment="Center" 
+                Foreground="#888" 
+                IsHitTestVisible="False"
+                Background="White" Height="28"/>
+                <TextBox x:Name="txtFullName"
+                Background="Transparent"
+                VerticalContentAlignment="Center"
+                GotFocus="txtInput_GotFocus" 
+                LostFocus="txtInput_LostFocus"
                 />
-            <TextBox x:Name="txtPhone"
-                 
-                 Width="120"
-                 Margin="5"
-                 Foreground="Gray"
-                 />
+            </Grid>
+
+            <Grid Width="140" Margin="5">
+                <TextBlock Text="Email" 
+                VerticalAlignment="Center" 
+                Foreground="#888" 
+                IsHitTestVisible="False"
+                Background="White" Height="28"/>
+                <TextBox x:Name="txtEmail"
+                Background="Transparent"
+                VerticalContentAlignment="Center"
+                GotFocus="txtInput_GotFocus" 
+                LostFocus="txtInput_LostFocus"
+    />
+            </Grid>
+            <Grid Width="100" Margin="5">
+                <TextBlock Text="Password" 
+            VerticalAlignment="Center" 
+            Foreground="#888" 
+            IsHitTestVisible="False"
+            Background="White" Height="28"/>
+                <TextBox x:Name="txtPassword"
+            Background="Transparent"
+            VerticalContentAlignment="Center"
+            GotFocus="txtInput_GotFocus" 
+            LostFocus="txtInput_LostFocus"
+/>
+            </Grid>
+            <Grid Width="50" Margin="5">
+                <TextBlock Text="US / AD" 
+            VerticalAlignment="Center" 
+            Foreground="#888" 
+            IsHitTestVisible="False"
+            Background="White" Height="28"/>
+                <TextBox x:Name="txtRole"
+            Background="Transparent"
+            VerticalContentAlignment="Center"
+            GotFocus="txtInput_GotFocus" 
+            LostFocus="txtInput_LostFocus"
+/>
+            </Grid>
+            <Grid Width="90" Margin="5">
+                <TextBlock Text="Address" 
+            VerticalAlignment="Center" 
+            Foreground="#888" 
+            IsHitTestVisible="False"
+            Background="White" Height="28"/>
+                <TextBox x:Name="txtAddress"
+            Background="Transparent"
+            VerticalContentAlignment="Center"
+            GotFocus="txtInput_GotFocus" 
+            LostFocus="txtInput_LostFocus"
+/>
+            </Grid>
+            <Grid Width="105" Margin="5">
+                <TextBlock Text="Phone" 
+            VerticalAlignment="Center" 
+            Foreground="#888" 
+            IsHitTestVisible="False"
+            Background="White" Height="28"/>
+                <TextBox x:Name="txtPhone"
+            Background="Transparent"
+            VerticalContentAlignment="Center"
+            GotFocus="txtInput_GotFocus" 
+            LostFocus="txtInput_LostFocus"
+/>
+            </Grid>
+
+
+
+
+
+
             <StackPanel Orientation="Horizontal" Margin="5" VerticalAlignment="Center">
                 <RadioButton x:Name="rbStatusActive" Content="Active" GroupName="StatusGroup" Margin="5"
-                         IsChecked="{Binding IsActive, Mode=TwoWay}" />
+                         />
                 <RadioButton x:Name="rbStatusInactive" Content="Inactive" GroupName="StatusGroup" Margin="5"
-                         IsChecked="{Binding IsActive, Mode=TwoWay}" />
+                         />
             </StackPanel>
 
         </StackPanel>
@@ -197,20 +264,20 @@
                     </StackPanel>
                 </Button>
 
-                <Grid Width="196" Height="46">
+                <Grid Width="250" Height="46">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <TextBox x:Name="txtSearch"
-                         FontSize="20"
+                         FontSize="16"
                          FontWeight="Medium"
                          FontFamily="Helvetica"
                          Height="40"
                          VerticalContentAlignment="Center"
-                         Width="180"
+                         Width="250"
                          Background="Transparent"
-                         BorderBrush="White"
+                         BorderBrush="Black"
                          HorizontalAlignment="Center"
                          GotFocus="txtSearch_GotFocus"
                          LostFocus="txtSearch_LostFocus" Margin="0,3,0,3">
@@ -222,7 +289,7 @@
                                             <Border Background="{TemplateBinding Background}"
                                                 BorderBrush="{TemplateBinding BorderBrush}"
                                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                                CornerRadius="20">
+                                                CornerRadius="20" Margin="0,0,58,0">
                                                 <ScrollViewer x:Name="PART_ContentHost" />
                                             </Border>
                                         </ControlTemplate>
@@ -231,13 +298,13 @@
                             </Style>
                         </TextBox.Style>
                     </TextBox>
-                    <TextBlock x:Name="txtPlaceholder" Text="Enter name"
-                           Foreground="White"
+                    <TextBlock x:Name="txtPlaceholder" 
                            FontSize="15"
                            FontWeight="Medium"
                            FontFamily="Helvetica"
                            VerticalAlignment="Center"
-                           Margin="10,0,8,0"
+                           HorizontalAlignment="Left"
+                           Margin="18,0,0,0"
                            IsHitTestVisible="False" />
                 </Grid>
             </StackPanel>
