--- a/Bakery.WpfApplication/View/BakeryManagement.xaml
+++ b/Bakery.WpfApplication/View/BakeryManagement.xaml
@@ -4,32 +4,38 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Bakery.WpfApplication.View"
+
         mc:Ignorable="d"
-        Height="416" Width="900">
+        Height="450" Width="1240" Loaded="UserControl_Loaded">
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
+            <RowDefinition Height="7*" />
+            <RowDefinition Height="11*"/>
             <RowDefinition Height="50" />
             <RowDefinition Height="60" />
         </Grid.RowDefinitions>
 
-        <!-- Fish/Koi DataGrid -->
+
         <DataGrid x:Name="dgData" Grid.Row="0" ItemsSource="{Binding bakeryList}"
-                  AutoGenerateColumns="False" IsReadOnly="False"
-                  
-                  CanUserAddRows="False">
+                  AutoGenerateColumns="False" IsReadOnly="True"
+                  SelectionChanged="dgData_SelectionChanged"
+                    PreviewMouseLeftButtonDown="dgData_PreviewMouseLeftButtonDown"
+                  CanUserAddRows="False" Grid.RowSpan="2" Margin="27,0,-27,0" >
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding ProductID}" Width="50" IsReadOnly="True" />
+                <DataGridTextColumn Header="ID" Binding="{Binding ProductId}" Width="50" />
                 <DataGridTextColumn Header="Name" Binding="{Binding ProductName}" Width="100" />
-                <DataGridTemplateColumn Header="Image" Width="200">
+
+                <DataGridTemplateColumn Header="Image" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding ImageURL}" Width="100" Height="100" Stretch="Uniform" />
+                            <Image  Source="{Binding ImageUrl}" Width="100" Height="100" Stretch="Uniform" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <!-- <DataGridTextColumn Header="Quantity" Binding="{Binding KoiFishQuantity}" Width="70" /> -->
-                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="100" />
+
+
+                <DataGridTextColumn Header="Description" Binding="{Binding Description}" Width="200" />
                 <DataGridTextColumn Header="Price" Binding="{Binding Price}" Width="70" />
                 <DataGridTextColumn Header="Stock" Binding="{Binding Stock}" Width="100" />
                 <DataGridTextColumn Header="CreatedAt" Binding="{Binding CreatedAt}" Width="100" />
@@ -37,12 +43,22 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <!-- Form for adding or editing fish -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="50,5,50,0">
-            <Button Content="Add Koi" Width="155" Margin="5" >
+
+        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="50,5,50,0">
+            <Button x:Name="CreateButton" Content="Add bakery" Width="155" Margin="5" Click="CreateButton_Click" >
                 <Button.Background>
                     <SolidColorBrush Color="#0099FF" />
                 </Button.Background>
+
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" Value="0.5"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
                 <Button.Triggers>
                     <EventTrigger RoutedEvent="MouseEnter">
                         <BeginStoryboard>
@@ -60,12 +76,23 @@
                             </Storyboard>
                         </BeginStoryboard>
                     </EventTrigger>
+
                 </Button.Triggers>
             </Button>
-            <Button Content="Update Koi" Width="155" Margin="5" >
+            <Button x:Name="UpdateButton" Content="Update bakery" Width="155" Margin="5" Click="UpdateButton_Click" >
                 <Button.Background>
                     <SolidColorBrush Color="#FF1B7140" />
                 </Button.Background>
+
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" Value="0.5"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
                 <Button.Triggers>
                     <EventTrigger RoutedEvent="MouseEnter">
                         <BeginStoryboard>
@@ -85,10 +112,20 @@
                     </EventTrigger>
                 </Button.Triggers>
             </Button>
-            <Button Content="Delete Koi" Width="155" Margin="5" Padding="5" >
+            <Button x:Name="DeleteButton" Content="Delete bakery" Width="155" Margin="5" Padding="5" Click="DeleteButton_Click" >
                 <Button.Background>
                     <SolidColorBrush Color="#FFA2AA3D" />
                 </Button.Background>
+
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" Value="0.5"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
                 <Button.Triggers>
                     <EventTrigger RoutedEvent="MouseEnter">
                         <BeginStoryboard>
@@ -111,7 +148,7 @@
             <StackPanel Height="44" Width="356" Margin="20,0,0,0" Orientation="Horizontal">
                 <Button x:Name="btnSearch" Height="46" Width="46"
                         Background="Transparent" BorderBrush="Transparent"
-                        HorizontalAlignment="Left" >
+                        HorizontalAlignment="Left" Click="btnSearch_Click" >
                     <StackPanel Orientation="Horizontal" Height="39" Width="151" RenderTransformOrigin="0.13,0.472">
                         <Image Source="/Images/search.png" Width="44" Height="40" Stretch="Uniform"
                                VerticalAlignment="Center" />
@@ -119,6 +156,10 @@
                 </Button>
 
                 <Grid Width="260" Height="46">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="13*"/>
+                        <RowDefinition Height="10*"/>
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
@@ -134,7 +175,7 @@
                              BorderBrush="Black"
                              HorizontalAlignment="Center"
                              GotFocus="txtSearch_GotFocus"
-                             LostFocus="txtSearch_LostFocus" Margin="0,3,0,3">
+                             LostFocus="txtSearch_LostFocus" Margin="0,3,0,3" Grid.RowSpan="2">
                         <TextBox.Style>
                             <Style TargetType="TextBox">
                                 <Setter Property="Template">
@@ -157,9 +198,9 @@
                                FontSize="15"
                                FontWeight="Medium"
                                FontFamily="Helvetica"
-                               VerticalAlignment="Center"
-                               Margin="10,0,8,0"
-                               IsHitTestVisible="False" />
+                               VerticalAlignment="Top"
+                               Margin="10,14,8,0"
+                               IsHitTestVisible="False" Grid.RowSpan="2" />
 
                 </Grid>
             </StackPanel>
@@ -167,18 +208,23 @@
 
         <!-- Adding/Editing form          -->
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" Height="38" VerticalAlignment="Top">
+        <StackPanel Grid.Row="2" Orientation="Horizontal" Height="38" VerticalAlignment="Top" Margin="27,0,-27,0">
             <TextBox x:Name="BakeryId" Width="40" Margin="5" IsEnabled="False" />
             <TextBox x:Name="BakeryName" Width="100" Margin="5" />
             <StackPanel Orientation="Horizontal">
                 <TextBox x:Name="Image" Width="110" Margin="5" IsReadOnly="True" />
-                <Button Content="Browse" Width="75" Margin="5" />
+                <Button x:Name="BrowseButton" Content="Browse" Width="75" Margin="5" Click="BrowseButton_Click"  />
             </StackPanel>
             <TextBox x:Name="Description" Width="100" Margin="5" />
             <TextBox x:Name="Price" Width="70" Margin="5" />
             <TextBox x:Name="Stock" Width="100" Margin="5" />
-            <TextBox x:Name="CreatedAt" Width="100" Margin="5" />
-            <ComboBox x:Name="cboCategory" Width="100" Margin="5" />
+            <TextBox x:Name="CreatedAt" Width="100" Margin="5" IsReadOnly="True"/>
+            <ComboBox x:Name="cboCategory"
+              Width="150"
+              DisplayMemberPath="CategoryName"
+              SelectedValuePath="CategoryId"
+              SelectionChanged="cboCategory_SelectionChanged"
+              Margin="5,0"/>
         </StackPanel>
     </Grid>
 </UserControl>
