--- a/Bakery.WpfApplication/AdminDashboardWindow.xaml
+++ b/Bakery.WpfApplication/AdminDashboardWindow.xaml
@@ -38,6 +38,11 @@
                 </StackPanel>
             </Button>
 
+            <Border x:Name="SubMenuContainer"
+            Background="Transparent"
+            Height="0"
+            ClipToBounds="True">
+                <StackPanel x:Name="SubMenu" Visibility="Visible">
             <Button x:Name="btnCustomer" Height="44" Width="145" Margin="0,10,0,0" Background="Transparent" BorderBrush="Transparent" Click="btnUser_Click">
                 <StackPanel Orientation="Horizontal" Height="44" Width="145">
                     <Image Source="/Images/use.png" Width="44" Height="40" Stretch="Uniform" VerticalAlignment="Center"/>
@@ -65,7 +70,9 @@
                     <TextBlock Text="Logout" VerticalAlignment="Bottom" Margin="5,0,0,0" Foreground="White" FontSize="18" Width="95" FontWeight="DemiBold" Height="29" />
                 </StackPanel>
             </Button>
+            </StackPanel>
 
+            </Border>
         </StackPanel>
         <StackPanel HorizontalAlignment="Left" Height="31" Margin="150,32,0,0" VerticalAlignment="Top" Width="1400">
             <StackPanel.Background>
